--- a/backend/package.json
+++ b/backend/package.json
@@ -20,23 +20,24 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "cookie-parser": "^1.4.6",
-    "jsonwebtoken": "^9.0.2",
-    "drizzle-orm": "^0.28.6",
-    "mysql2": "^3.6.1",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
     "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.28.6",
+    "express": "^4.18.2",
+    "googleapis": "^126.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.1",
     "node-cron": "^3.0.2",
-    "googleapis": "^126.0.1"
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
+    "drizzle-kit": "^0.19.13",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "drizzle-kit": "^0.19.13"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=14.0.0"
